# ecom_crawler

./: README.md  config.py  main.py  pyproject.toml  requirements.txt  version.py
adapters/: __init__.py  base.py  generic.py  github.py  registry.py
apis/: __init__.py  amazon_paapi.py  app.py  jd_union.py  taobao_top.py
engines/: __init__.py  base.py  browser_engine.py  simple_engine.py
export/: __init__.py  base.py  csv_exporter.py  json_exporter.py
ui/: __init__.py  cli.py
utils/: __init__.py  http.py  loader.py  logging.py  parsing.py
