[project]
name = "ecom-crawler"
version = "0.1.0"
description = "Modular, upgrade-friendly e-commerce crawler"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Your Name", email="your_email@example.com"}]
dependencies = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
